# System-Monitor

./: CMakeCache.txt  CMakeLists.txt  Makefile  SystemMonitor  cmake_install.cmake
include/: CPUMonitor.h  MemoryMonitor.h  MonitorUI.h  ProcessInfo.h  ProcessParser.h  main.h
src/: CPUMonitor.cpp  MemoryMonitor.cpp  MonitorUI.cpp  ProcessInfo.cpp  ProcessParser.cpp  main.cpp
